[tool.poetry]
name = "problem-sheet-maker"
version = "0.1.0"
description = ""
authors = ["Andrei <142443853+hjzres@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.37.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
